# rfm7

./: .gitignore  README.md  done.md  future.md  later.md  learning.md  next.md  outstanding.md  progress-updates.md  proposal.md  questions.md  tech_debt.md  tooling.md
dht-lookup-dataset/: CREDIT.md  README.md  bar_region_total_retrieval.py  cdf_plot_dialing_phase.py  cdf_plot_fetching_phase.py  cdf_plot_getting_closest_peers_phase.py  cdf_plot_initiated_phase.py  log_parse.py  log_parse_test.py  pie_phase_latency.py  plot_getting_closest_peers_phase.py  plot_retrievals.py  print_event_sequence.py  pyproject.toml  retrieval-events.md
dht-lookup-dataset/models/: model_add_provider_query.py  model_find_node_query.py  model_get_providers_query.py  model_log_file.py  model_log_file_test.py  model_log_line.py  model_log_line_test.py  model_peer.py  model_publication.py  model_retrieval.py
meetings/: kickoff.md  office_hours_1.md  office_hours_2.md  office_hours_3.md  office_hours_4.md  progress_1.md  progress_2.md  progress_3.md  progress_4.md  progress_5.md
